--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,13 @@
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <body>
 <div sec:authorize="!isAuthenticated()">
-    <a th:href="@{/oauth2/authorization/okta}">Log In</a>
+    <a th:href="@{/oauth2/authorization/auth0}">Log In</a>
 </div>
 <div sec:authorize="isAuthenticated()">
     <p>You are logged in!</p>
+    <form name="logoutForm" th:action="@{/logout}" method="post">
+        <button type="submit">Log out</button>
+    </form>
 </div>
 </body>
 </html>
