--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,10 +5,10 @@
     <a th:href="@{/oauth2/authorization/auth0}">Log In</a>
 </div>
 <div sec:authorize="isAuthenticated()">
-    <p>You are logged in!</p>
-    <form name="logoutForm" th:action="@{/logout}" method="post">
-        <button type="submit">Log out</button>
-    </form>
+    <Frame><img th:src="${profile.get('picture')}" th:attr="alt=${profile.get('name')}"/></Frame>
+    <h2 th:text="${profile.get('name')}"></h2>
+    <p th:text="${profile.get('email')}"></p>
+    <a th:href="@{/logout}">Log Out</a>
 </div>
 </body>
 </html>
